# DroidView

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  bridge.rs  config.rs  device.rs  lib.rs  logging.rs  main.rs  utils.rs
src/ui/: device_list.rs  mod.rs  panels.rs  settings.rs
