[package]
name = "DroidView"
version = "0.1.0"
edition = "2021"
authors = ["Genxster1998 <ck.2229.ck@gmail.com>"]
description = "A simple, pluggable, graphical user interface for scrcpy"
license = "GPL-3.0"
repository = "https://github.com/Genxster1998/DroidView"
keywords = ["android", "scrcpy", "gui", "screen-mirroring"]
categories = ["gui", "system"]

[dependencies]
# GUI Framework
eframe = "0.26.0"
egui = "0.26.0"
egui_extras = "0.26.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File system operations
dirs = "5.0"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Platform detection
os_info = "3.7"

# Image handling
image = "0.24"

# Network utilities
reqwest = { version = "0.11", features = ["json"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Cross-platform path handling
path-slash = "0.2"

# Notification support
notify-rust = "4.8"

# File Dialog
rfd = "0.14"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4" 
